--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
         "dev": "node server.js"
     },
     "dependencies": {
+        "@anthropic-ai/sdk": "^0.74.0",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "ethers": "^6.16.0",
