--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
+    "@react-three/postprocessing": "^3.0.4",
     "@tanstack/react-query": "^5.90.20",
     "@vitejs/plugin-react": "^5.1.3",
     "@web3modal/wagmi": "^5.1.11",
     "ethers": "^6.16.0",
+    "gsap": "^3.14.2",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-router-dom": "^7.13.0",
+    "three": "^0.182.0",
     "viem": "^2.45.1",
     "vite": "^7.3.1",
     "wagmi": "^3.4.2"
