--- a/backend/package.json
+++ b/backend/package.json
@@ -8,11 +8,13 @@
     },
     "dependencies": {
         "@anthropic-ai/sdk": "^0.74.0",
+        "@google/generative-ai": "^0.24.1",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "ethers": "^6.16.0",
         "express": "^4.18.2",
         "express-rate-limit": "^7.1.0",
+        "groq-sdk": "^0.37.0",
         "helmet": "^7.1.0",
         "uuid": "^13.0.0",
         "ws": "^8.19.0"
